--- a/.env
+++ b/.env
@@ -6,3 +6,12 @@ POSTGRES_DB=avito_shop
 POSTGRES_HOST=postgres_shop
 POSTGRES_PORT=5432
 PG_POOL_MAX=4
+
+REDIS_PORT=6379
+REDIS_HOST=redis_container
+REDIS_PASSWORD=""
+REDIS_USER=root
+REDIS_DB=0
+REDIS_MAX_RETRIES=5
+REDIS_DIAL_TIMEOUT=5s
+REDIS_TIMEOUT=10s
