--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,21 @@ services:
     networks:
       - shop_network
 
+  redis:
+    image: redis:7
+    container_name: redis_container
+    ports:
+      - "${REDIS_PORT}:${REDIS_PORT}"
+    volumes:
+      - ./redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - shop_network
+
 volumes:
   postgres_data:
 
